# em6809-core

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: README.md
docs/en/: instruction_status.md  module_overview.md  os9_device_map_templates.md
docs/ja/: instruction_status.md  module_overview.md  os9_device_map_templates.md
src/: bootscript.rs  bus.rs  config.rs  cpu.rs  debug.rs  disasm.rs  io.rs  lib.rs  loader.rs  mmu.rs  timer.rs
tests/: blockdev.rs  breakpoints_call_stack.rs  console_iobus.rs  cpu_basic.rs  cycles_more.rs  instruction_boundaries.rs  irq_and_protect.rs  os9_priority.rs  step_over_out.rs  swi_push_order.rs  timer.rs
